nginx-ingress-default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: kube-system
  labels:
    app: default-http-backend
spec:
  ports:
  - name: default-http-backend
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: default-http-backend
